display nav on large screens and prevent overflow

--- a/app/src/css/modules/_nav.css
+++ b/app/src/css/modules/_nav.css
@@ -109,6 +109,7 @@
       transform: none;
       top: 0;
       left: calc(100% - 320px);
+      display: block;
     }
     
     @mixin atLarge {
